--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@types/react-dom": "18.2.1",
     "@uidotdev/usehooks": "^2.1.0",
     "axios": "^1.4.0",
+    "cookie": "^0.6.0",
     "fs": "^0.0.1-security",
     "html-react-parser": "^4.2.1",
     "jquery": "^3.6.4",
+    "js": "^0.1.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "13.3.4",
@@ -38,6 +40,7 @@
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/qs": "^6.9.7",
     "@types/react-click-outside": "^3.0.3",
     "html-webpack-plugin": "^5.5.1",
