--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,17 @@
     "@uidotdev/usehooks": "^2.1.0",
     "axios": "^1.4.0",
     "cookie": "^0.6.0",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "html-react-parser": "^4.2.1",
+    "joi": "^17.13.1",
     "jquery": "^3.6.4",
     "js": "^0.1.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "13.3.4",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "qs": "^6.11.2",
     "react": "18.2.0",
