--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/nodemailer": "^6.4.15",
     "@types/qs": "^6.9.7",
     "@types/react-click-outside": "^3.0.3",
     "html-webpack-plugin": "^5.5.1",
