--- a/strapi-app/package.json
+++ b/strapi-app/package.json
@@ -14,13 +14,15 @@
     "@_sh/strapi-plugin-ckeditor": "^2.0.4",
     "@strapi/plugin-i18n": "4.10.1",
     "@strapi/plugin-users-permissions": "4.10.1",
+    "@strapi/provider-email-nodemailer": "^4.24.2",
     "@strapi/strapi": "4.10.1",
     "better-sqlite3": "9.5.0",
     "react-three-toggle": "^0.5.2",
     "sharp": "^0.33.3",
     "strapi-plugin-comments": "^2.2.16",
     "strapi-plugin-menus": "^1.4.1",
-    "strapi-plugin-responsive-image": "^1.2.0"
+    "strapi-plugin-responsive-image": "^1.2.0",
+    "strapi-provider-email-nodemailer": "^3.6.11"
   },
   "author": {
     "name": "A Strapi developer"
